исправление орфографии + изменение кнопки на сслыку, работа с css

--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
                 <div class="qst">
                     <p>Как все перенести?</p>
                     <div>
-                        Жми на кнопку "ПЕРЕНЕСТИ". Затем заходишь в Vk, заходишь в Spotify и ждешь. Пару минут и ты
+                        Жми на кнопку "ПЕРЕНЕСТИ". Затем заходишь в Vk, заходишь в Spotify и ждешь. Пара минут, и ты
                         можешь наслаждаться своей любимой музыкой в Spotify, который начнет учитывать твои вкусы.
                     </div>
                 </div>
