--- a/templates/spotify_form.html
+++ b/templates/spotify_form.html
@@ -35,7 +35,7 @@
                 <div class="test">C VK В SPOTIFY</div>
                 <div class="btn-start">
                     <div id="hidden"></div>
-                    <button onclick="window.location.href = {{ auth_url }};" id="auth_spotify">войти в spotify</button>
+                    <a id="auth_spotify" href="{{ auth_url }}">войти в spotify</a>
                 </div>
             </div>
         </div>
@@ -53,7 +53,7 @@
                 <div class="qst">
                     <p>Как все перенести?</p>
                     <div>
-                        Жми на кнопку "ПЕРЕНЕСТИ". Затем заходишь в Vk, заходишь в Spotify и ждешь. Пару минут и ты
+                        Жми на кнопку "ПЕРЕНЕСТИ". Затем заходишь в Vk, заходишь в Spotify и ждешь. Пара минут, и ты
                         можешь наслаждаться своей любимой музыкой в Spotify, который начнет учитывать твои вкусы.
                     </div>
                 </div>
