--- a/static/mobile-css300px.css
+++ b/static/mobile-css300px.css
@@ -81,6 +81,13 @@ a {
   bottom: 25px;
   font-size: 24px;
   font-weight: bold;
+  text-transform: uppercase;
+  color: #505050;
+  margin: 0 auto;
+  width: 100%;
+  height: 77px;
+  padding: 15px 4px;
+
 }
 
 .logo span {
