--- a/templates/replacing.html
+++ b/templates/replacing.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8" />
+    <link rel="shortcut icon" href="/static/icon/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/static/mobile-css300px.css" />
+    <link rel="stylesheet" href="/static/mobile-css600px.css" media="only screen and (min-device-width: 600px)" />
+    <link rel="stylesheet" href="/static/mobile-css800px.css" media="only screen and (min-device-width: 800px)" />
+    <link rel="stylesheet" href="/static/mobile-css1000px.css" media="only screen and (min-device-width: 1000px)" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <title>Перенос музыки</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 </head>
 <body>
@@ -12,7 +19,7 @@ $(function() {
         url: '/transfer',
         type: 'GET',
         success: function(response) {
-            document.getElementById("p1").innerHTML="done"
+            document.getElementById("transfer").innerHTML="завершено"
             const json = jQuery.parseJSON(response);
             document.getElementById("errors").innerHTML=json.errors
 
@@ -23,7 +30,53 @@ $(function() {
     });
 });
     </script>
-<p id="p1">replacing</p>
-<div id="errors"></div>
+
+        <div class="top-part">
+            <div class="header">
+                <div class="logo">
+                    <a href="/">spotifier</a>
+                </div>
+
+                <div class="menu">
+                    <button>
+                        <div id="container">
+                            <div class="line"></div>
+                            <div class="line"></div>
+                            <div class="line"></div>
+                        </div>
+                    </button>
+                </div>
+            </div>
+
+            <div class="banner">
+                <div class="smth-1">Перенести</div>
+                <div class="test">C VK В SPOTIFY</div>
+                <div class="btn-start">
+                    <div id="hidden"></div>
+                    <button id="transfer">перенос</button>
+                </div>
+                <div id="errors"></div>
+            </div>
+        </div>
+
+        <div class="FAQ">
+            часто задаваемые вопросы
+            <div class="box">
+                <div class="qst">
+                    <p>почему мы?</p>
+                    <div>
+                        Перенос музыки за пару кликов, ваши данные не хранятся на наших серверах, все строго
+                        конфиденциально.
+                    </div>
+                </div>
+                <div class="qst">
+                    <p>Как все перенести?</p>
+                    <div>
+                        Жми на кнопку "ПЕРЕНЕСТИ". Затем заходишь в Vk, заходишь в Spotify и ждешь. Пара минут, и ты
+                        можешь наслаждаться своей любимой музыкой в Spotify, который начнет учитывать твои вкусы.
+                    </div>
+                </div>
+            </div>
+        </div>
 </body>
 </html>
