--- a/templates/vk_form.html
+++ b/templates/vk_form.html
@@ -43,10 +43,12 @@
             <form action="" method="post" class="form">
                 <p>
                     <label id="user" for="username">Логин</label>
+                    <!--suppress HtmlFormInputWithoutLabel -->
                     <input type="text" name="login">
                 </p>
                 <p>
                     <label id="pass" for="password">Пароль</label>
+                    <!--suppress HtmlFormInputWithoutLabel -->
                     <input type="password" name="password">
                 </p>
                 <p>
