--- a/templates/replacing.html
+++ b/templates/replacing.html
@@ -55,7 +55,17 @@ $(function() {
                     <div id="hidden"></div>
                     <button id="transfer">перенос</button>
                 </div>
-                <div id="errors"></div>
+                <div id="errors">
+                    <p>Выберите вариант</p>
+                        <select name="form_select" size="5" multiple="multiple">
+                            <option value="Значение 1">Первый вариант</option>
+                            <option value="Значение 2">Второй вариант</option>
+                            <option value="Значение 3">Третий вариант</option>
+                            <option value="Значение 4">Четвертый вариант</option>
+                            <option value="Значение 5">Пятый вариант</option>
+                            <option value="Значение 6">Шестой вариант</option>
+                        </select>
+                </div>
             </div>
         </div>
 
