--- a/templates/replacing.html
+++ b/templates/replacing.html
@@ -62,8 +62,8 @@ $(function() {
                     <button id="transfer">перенос</button>
                 </div>
                 <div id="errors">
-                    <p>Выберите вариант</p>
-                    <select id="errors_transfer" size="5" multiple="multiple">
+                    <p id="errors_transfer_label">Не найденные треки:</p>
+                    <select id="errors_transfer" size="3">
                     </select>
                 </div>
             </div>
