--- a/static/mobile-css300px.css
+++ b/static/mobile-css300px.css
@@ -141,7 +141,7 @@ a {
   margin-top: 50px;
   text-align: center;
   width: 100%;
-  height: 149px;
+  padding-bottom: 20px;
 }
 
 .banner * {
@@ -232,7 +232,19 @@ a {
 }
 
 #errors {
-display: none;
+  display: none;
+  margin: 0 auto;
+}
+
+#errors_transfer_label {
+  margin: 0;
+}
+
+#errors_transfer{
+  width: 70%;
+  font-size: 16px;
+  max-width: 250px;
+  background-color: #e9e9e9;
 }
 
 .FAQ {
