--- a/static/mobile-css300px.css
+++ b/static/mobile-css300px.css
@@ -41,7 +41,7 @@ body * {
 .vk_form {
   position: relative;
   margin-bottom: 20px;
-  bottom: 110px;
+  bottom: 42px;
   text-align: center;
 }
 
@@ -237,6 +237,7 @@ a {
 }
 
 #errors_transfer_label {
+  color: #505050;
   margin: 0;
 }
 
@@ -245,6 +246,12 @@ a {
   font-size: 16px;
   max-width: 250px;
   background-color: #e9e9e9;
+  color: #505050;
+  border-width: 2px;
+  border-radius: 10px;
+  border-color: #777879;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .FAQ {
