--- a/templates/replacing.html
+++ b/templates/replacing.html
@@ -62,7 +62,7 @@ $(function() {
                 </div>
                 <div id="errors">
                     <p id="errors_transfer_label">Не найденные треки:</p>
-                    <select id="errors_transfer" size="3">
+                    <select id="errors_transfer" size="3" disabled="disabled">
                     </select>
                 </div>
             </div>
