--- a/templates/vk_form.html
+++ b/templates/vk_form.html
@@ -43,13 +43,13 @@
             <form action="" method="post" class="form">
                 <div class="vk_auth_login">
                     <p>
-                        <label id="user" for="username">Логин</label>
+                        <p id="user">Логин</p>
                         <input type="text" name="login">
                     </p>
                 </div>
                 <div class="vk_auth_pass">
                     <p>
-                        <label id="pass" for="password">Пароль</label>
+                        <p id="pass">Пароль</p>
                         <input type="password" name="password">
                     </p>
                 </div>
