--- a/templates/index.html
+++ b/templates/index.html
@@ -59,5 +59,10 @@
                 </div>
             </div>
         </div>
+    <div>
+        <a href="https://freekassa.ru" target="_blank" rel="noopener noreferrer">
+            <img src="https://cdn.freekassa.ru/banners/big-white-2.png" title="Прием платежей на сайте для физических лиц и т.д.">
+        </a>
+    </div>
     </body>
 </html>
