--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html lang="ru">
     <head>
+
+                <!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+       (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+       m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+       (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+       ym(83155189, "init", {
+            clickmap:true,
+            trackLinks:true,
+            accurateTrackBounce:true,
+            webvisor:true
+       });
+</script>
+<!-- /Yandex.Metrika counter -->
+
         <meta charset="utf-8" />
         <link rel="shortcut icon" href="/static/icon/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="/static/mobile-css300px.css" />
@@ -59,10 +75,5 @@
                 </div>
             </div>
         </div>
-    <div>
-        <a href="https://freekassa.ru" target="_blank" rel="noopener noreferrer">
-            <img src="https://cdn.freekassa.ru/banners/big-white-2.png" title="Прием платежей на сайте для физических лиц и т.д.">
-        </a>
-    </div>
     </body>
 </html>
