--- a/templates/replacing.html
+++ b/templates/replacing.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+            <!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+       (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+       m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+       (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+       ym(83155189, "init", {
+            clickmap:true,
+            trackLinks:true,
+            accurateTrackBounce:true,
+            webvisor:true
+       });
+</script>
+<!-- /Yandex.Metrika counter -->
+
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="/static/icon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/static/mobile-css300px.css" />
@@ -82,27 +98,42 @@
 
 
     async function b(){
-    $(function () {
-        $.ajax({
-            url: '/transfer',
-            type: 'GET',
-            success: function (response) {
-                document.getElementById("transfer").innerHTML = "завершено"
-                const json = jQuery.parseJSON(response);
-                if (isNaN(json.errors)) {
-                    for (let key in json.errors) {
-                        $("#errors_transfer").append("<option>" + json.errors[key] + "</option>")
+        $(function () {
+            $.ajax({
+                url: '/transfer',
+                type: 'GET',
+                success: function (response) {
+                    document.getElementById("transfer").innerHTML = "завершено"
+                    const json = jQuery.parseJSON(response);
+                    if (isNaN(json.errors)) {
+                        for (let key in json.errors) {
+                            $("#errors_transfer").append("<option>" + json.errors[key] + "</option>")
+                        }
+                        $("#errors").css("display", "block");
                     }
-                    $("#errors").css("display", "block");
-                }
-                clearInterval(intervalId)
-            },
-            error: function (error) {
-                console.log(error);
-            }
-        });
-    })
+                    clearInterval(intervalId)
+                    c()
+                },
+                error: function (error) {}
+            });
+        })
+    }
 
+    async function c() {
+        $(function () {
+            $.ajax({
+                url: '/pay',
+                type: 'GET',
+                success: function (response) {
+                    const json = jQuery.parseJSON(response);
+                    if (json.url_to_pay !== null)
+                    document.getElementById("transfer").innerHTML = json.url_to_pay
+                },
+                error: function (error) {
+                    console.log(error);
+                }
+            });
+        })
     }
     a()
     b()
