--- a/static/mobile-css800px.css
+++ b/static/mobile-css800px.css
@@ -36,4 +36,13 @@
 .qst {
   font-size: 22px;
 }
+
+.info_box td{
+  font-size: 13px;
+}
+
+.info_box img {
+  height: 16px;
+}
+
 /*# sourceMappingURL=mobile-css800px.css.map */
