--- a/templates/index.html
+++ b/templates/index.html
@@ -75,5 +75,15 @@
                 </div>
             </div>
         </div>
+    <div class="info">
+        <table class="info_container">
+            <tr class="info_box">
+                <td>Арламенков Андрей Сергеевич</td>
+                <td>ИНН: 784813689183 </td>
+                <td><img src="/static/icon/mail-icon.png" alt="mail:">tri2004@yandex.ru</td>
+                <td><img src="/static/icon/telegram-icon.png" alt="telegram:">@andrey_bronmal</td>
+            </tr>
+        </table>
+    </div>
     </body>
 </html>
