--- a/templates/replacing.html
+++ b/templates/replacing.html
@@ -81,6 +81,16 @@
                     </div>
                 </div>
             </div>
+            <div class="info">
+                <table class="info_container">
+                    <tr class="info_box">
+                        <td>Арламенков Андрей Сергеевич</td>
+                        <td>ИНН: 784813689183 </td>
+                        <td><img src="/static/icon/mail-icon.png" alt="mail:">tri2004@yandex.ru</td>
+                        <td><img src="/static/icon/telegram-icon.png" alt="telegram:">@andrey_bronmal</td>
+                    </tr>
+                </table>
+            </div>
         </div>
 </body>
 <script>
