--- a/templates/vk_form.html
+++ b/templates/vk_form.html
@@ -29,7 +29,9 @@
         <title>Авторизация VK</title>
 </head>
 <body>
-<div class="top-part">
+
+        <div class="content">
+            <div class="top-part">
             <div class="header">
                 <div class="logo">
                     <a href="/">spotifier</a>
@@ -108,7 +110,8 @@
                 </div>
             </div>
         </div>
-            <div class="info">
+        </div>
+            <footer class="info">
                 <table class="info_container">
                     <tr class="info_box">
                         <td>Арламенков Андрей Сергеевич</td>
@@ -117,6 +120,6 @@
                         <td><img src="/static/icon/telegram-icon.png" alt="telegram:">@andrey_bronmal</td>
                     </tr>
                 </table>
-            </div>
+            </footer>
 </body>
 </html>
