--- a/templates/replacing.html
+++ b/templates/replacing.html
@@ -29,9 +29,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 </head>
 <body>
-
-
-        <div class="top-part">
+            <div class="content">
+                <div class="top-part">
             <div class="header">
                 <div class="logo">
                     <a href="/">spotifier</a>
@@ -81,7 +80,8 @@
                     </div>
                 </div>
             </div>
-            <div class="info">
+            </div>
+            <footer class="info">
                 <table class="info_container">
                     <tr class="info_box">
                         <td>Арламенков Андрей Сергеевич</td>
@@ -90,7 +90,7 @@
                         <td><img src="/static/icon/telegram-icon.png" alt="telegram:">@andrey_bronmal</td>
                     </tr>
                 </table>
-            </div>
+            </footer>
         </div>
 </body>
 <script>
