--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,8 @@
         <title>Spotifier</title>
     </head>
     <body>
-    <div class="content">
+    <div class="wrapper">
+        <div class="content">
          <div class="top-part">
             <div class="header">
                 <div class="logo">
@@ -77,8 +78,7 @@
             </div>
         </div>
     </div>
-
-    <footer class="info">
+         <div class="info">
         <table class="info_container">
             <tr class="info_box">
                 <td>Арламенков Андрей Сергеевич</td>
@@ -87,6 +87,11 @@
                 <td><img src="/static/icon/telegram-icon.png" alt="telegram:">@andrey_bronmal</td>
             </tr>
         </table>
-    </footer>
+                 </div>
+
+    </div>
+
+
+
     </body>
 </html>
