--- a/static/mobile-css1000px.css
+++ b/static/mobile-css1000px.css
@@ -110,5 +110,12 @@
   vertical-align: middle;
 }
 
+#user_agreement, #user_agreement a{
+  font-size: 12px;
+}
+
+#user_agreement a{
+  color: navy;
+}
 
 /*# sourceMappingURL=mobile-css1000px.css.map */
