--- a/templates/replacing.html
+++ b/templates/replacing.html
@@ -29,69 +29,73 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 </head>
 <body>
-            <div class="content">
-                <div class="top-part">
-            <div class="header">
-                <div class="logo">
-                    <a href="/">spotifier</a>
-                </div>
-
-                <div class="menu">
-                    <button>
-                        <div id="container">
-                            <div class="line"></div>
-                            <div class="line"></div>
-                            <div class="line"></div>
-                        </div>
-                    </button>
-                </div>
-            </div>
-
-            <div class="banner">
-                <div class="smth-1">Перенести</div>
-                <div class="test">C VK В SPOTIFY</div>
-                <div class="btn-start">
-                    <div id="hidden"></div>
-                    <button id="transfer">перенос</button>
-                </div>
-                <div id="errors">
-                    <p id="errors_transfer_label">Ненайденные треки:</p>
-                    <select id="errors_transfer" size="3" >
-                    </select>
-                </div>
-            </div>
+    <div class="wrapper"><div class="content">
+        <div class="top-part">
+    <div class="header">
+        <div class="logo">
+            <a href="/">spotifier</a>
         </div>
 
-        <div class="FAQ">
-            часто задаваемые вопросы
-            <div class="box">
-                <div class="qst">
-                    <p>почему мы?</p>
-                    <div>
-                        Перенос музыки за пару кликов, ваши данные не хранятся на наших серверах, все строго
-                        конфиденциально.
-                    </div>
+        <div class="menu">
+            <button>
+                <div id="container">
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
                 </div>
-                <div class="qst">
-                    <p>Как все перенести?</p>
-                    <div>
-                        Жми на кнопку "ПЕРЕНЕСТИ". Затем заходишь в Vk, заходишь в Spotify и ждешь. Пара минут, и ты
-                        можешь наслаждаться своей любимой музыкой в Spotify, который начнет учитывать твои вкусы.
-                    </div>
-                </div>
-            </div>
-            </div>
-            <footer class="info">
-                <table class="info_container">
-                    <tr class="info_box">
-                        <td>Арламенков Андрей Сергеевич</td>
-                        <td>ИНН: 784813689183 </td>
-                        <td><img src="/static/icon/mail-icon.png" alt="mail:">tri2004@yandex.ru</td>
-                        <td><img src="/static/icon/telegram-icon.png" alt="telegram:">@andrey_bronmal</td>
-                    </tr>
-                </table>
-            </footer>
+            </button>
         </div>
+    </div>
+
+    <div class="banner">
+        <div class="smth-1">Перенести</div>
+        <div class="test">C VK В SPOTIFY</div>
+        <div class="btn-start">
+            <div id="hidden"></div>
+            <button id="transfer">перенос</button>
+            <div id="user_agreement" style="display: none;">
+                *Нажимая на кнопку оплатить вы соглашаеетесь с 
+                <a href="/static/Spotifier Пользовательское Соглашение.pdf">пользовательским соглашением</a>
+            </div>
+        </div>
+        <div id="errors">
+            <p id="errors_transfer_label">Ненайденные треки:</p>
+            <select id="errors_transfer" size="3" >
+            </select>
+        </div>
+    </div>
+</div>
+
+<div class="FAQ">
+    часто задаваемые вопросы
+    <div class="box">
+        <div class="qst">
+            <p>почему мы?</p>
+            <div>
+                Перенос музыки за пару кликов, ваши данные не хранятся на наших серверах, все строго
+                конфиденциально.
+            </div>
+        </div>
+        <div class="qst">
+            <p>Как все перенести?</p>
+            <div>
+                Жми на кнопку "ПЕРЕНЕСТИ". Затем заходишь в Vk, заходишь в Spotify и ждешь. Пара минут, и ты
+                можешь наслаждаться своей любимой музыкой в Spotify, который начнет учитывать твои вкусы.
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="info">
+        <table class="info_container">
+            <tr class="info_box">
+                <td>Арламенков Андрей Сергеевич</td>
+                <td>ИНН: 784813689183 </td>
+                <td><img src="/static/icon/mail-icon.png" alt="mail:">tri2004@yandex.ru</td>
+                <td><img src="/static/icon/telegram-icon.png" alt="telegram:">@andrey_bronmal</td>
+            </tr>
+        </table>
+    </div>
+            
 </body>
 <script>
     let success = false
@@ -137,7 +141,11 @@
                 success: function (response) {
                     const json = jQuery.parseJSON(response);
                     if (json.url_to_pay !== null)
-                    document.getElementById("transfer").innerHTML = json.url_to_pay
+                    {
+                        document.getElementById("transfer").setAttribute("onclick", 'window.location.href = ' + "'" + json.url_to_pay + "'")
+                        document.getElementById("transfer").innerHTML = "Оплатить*"
+                        document.getElementById("user_agreement").style.display = "block"
+                    }
                 },
                 error: function (error) {
                     console.log(error);
