--- a/templates/spotify_form.html
+++ b/templates/spotify_form.html
@@ -29,64 +29,66 @@
         <title>Авторизация Spotify</title>
     </head>
     <body>
-
-        <div class="content">
-            <div class="top-part">
-            <div class="header">
-                <div class="logo">
-                    <a href="/">spotifier</a>
-                </div>
-
-                <div class="menu">
-                    <button>
-                        <div id="container">
-                            <div class="line"></div>
-                            <div class="line"></div>
-                            <div class="line"></div>
-                        </div>
-                    </button>
-                </div>
+<div class="wrapper">
+    <div class="content">
+        <div class="top-part">
+        <div class="header">
+            <div class="logo">
+                <a href="/">spotifier</a>
             </div>
 
-            <div class="banner">
-                <div class="smth-1">Перенести</div>
-                <div class="test">C VK В SPOTIFY</div>
-                <div class="btn-start">
-                    <div id="hidden"></div>
-                    <a id="auth_spotify" href="{{ auth_url }}">войти в spotify</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="FAQ">
-            часто задаваемые вопросы
-            <div class="box">
-                <div class="qst">
-                    <p>почему мы?</p>
-                    <div>
-                        Перенос музыки за пару кликов, ваши данные не хранятся на наших серверах, все строго
-                        конфиденциально.
+            <div class="menu">
+                <button>
+                    <div id="container">
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
                     </div>
+                </button>
+            </div>
+        </div>
+
+        <div class="banner">
+            <div class="smth-1">Перенести</div>
+            <div class="test">C VK В SPOTIFY</div>
+            <div class="btn-start">
+                <div id="hidden"></div>
+                <a id="auth_spotify" href="{{ auth_url }}">войти в spotify</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="FAQ">
+        часто задаваемые вопросы
+        <div class="box">
+            <div class="qst">
+                <p>почему мы?</p>
+                <div>
+                    Перенос музыки за пару кликов, ваши данные не хранятся на наших серверах, все строго
+                    конфиденциально.
                 </div>
-                <div class="qst">
-                    <p>Как все перенести?</p>
-                    <div>
-                        Жми на кнопку "ПЕРЕНЕСТИ". Затем заходишь в Vk, заходишь в Spotify и ждешь. Пара минут, и ты
-                        можешь наслаждаться своей любимой музыкой в Spotify, который начнет учитывать твои вкусы.
-                    </div>
+            </div>
+            <div class="qst">
+                <p>Как все перенести?</p>
+                <div>
+                    Жми на кнопку "ПЕРЕНЕСТИ". Затем заходишь в Vk, заходишь в Spotify и ждешь. Пара минут, и ты
+                    можешь наслаждаться своей любимой музыкой в Spotify, который начнет учитывать твои вкусы.
                 </div>
             </div>
         </div>
-        </div>
-            <footer class="info">
-                <table class="info_container">
-                    <tr class="info_box">
-                        <td>Арламенков Андрей Сергеевич</td>
-                        <td>ИНН: 784813689183 </td>
-                        <td><img src="/static/icon/mail-icon.png" alt="mail:">tri2004@yandex.ru</td>
-                        <td><img src="/static/icon/telegram-icon.png" alt="telegram:">@andrey_bronmal</td>
-                    </tr>
-                </table>
-            </footer>
+    </div>
+    </div>
+        <footer class="info">
+            <table class="info_container">
+                <tr class="info_box">
+                    <td>Арламенков Андрей Сергеевич</td>
+                    <td>ИНН: 784813689183 </td>
+                    <td><img src="/static/icon/mail-icon.png" alt="mail:">tri2004@yandex.ru</td>
+                    <td><img src="/static/icon/telegram-icon.png" alt="telegram:">@andrey_bronmal</td>
+                </tr>
+            </table>
+        </footer>
+</div>
+        
     </body>
 </html>
