поправил нижно панельку при переносе

--- a/templates/replacing.html
+++ b/templates/replacing.html
@@ -29,7 +29,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 </head>
 <body>
-    <div class="wrapper"><div class="content">
+    <div class="wrapper">
+        <div class="content">
         <div class="top-part">
     <div class="header">
         <div class="logo">
@@ -85,17 +86,19 @@
         </div>
     </div>
     </div>
-    <div class="info">
-        <table class="info_container">
-            <tr class="info_box">
-                <td>Арламенков Андрей Сергеевич</td>
-                <td>ИНН: 784813689183 </td>
-                <td><img src="/static/icon/mail-icon.png" alt="mail:">tri2004@yandex.ru</td>
-                <td><img src="/static/icon/telegram-icon.png" alt="telegram:">@andrey_bronmal</td>
-            </tr>
-        </table>
-    </div>
-            
+    
+          </div>
+          <div class="info">
+            <table class="info_container">
+                <tr class="info_box">
+                    <td>Арламенков Андрей Сергеевич</td>
+                    <td>ИНН: 784813689183 </td>
+                    <td><img src="/static/icon/mail-icon.png" alt="mail:">tri2004@yandex.ru</td>
+                    <td><img src="/static/icon/telegram-icon.png" alt="telegram:">@andrey_bronmal</td>
+                </tr>
+            </table>
+        </div>
+        </div>  
 </body>
 <script>
     let success = false
