--- a/templates/replacing.html
+++ b/templates/replacing.html
@@ -148,6 +148,7 @@
                         document.getElementById("transfer").setAttribute("onclick", 'window.location.href = ' + "'" + json.url_to_pay + "'")
                         document.getElementById("transfer").innerHTML = "Оплатить*"
                         document.getElementById("user_agreement").style.display = "block"
+                        document.getElementById("hidden").innerHTML = "Вы перенесли 100 треков, чтобы переносить без ограничений нажмите на кнопку оплатить"
                     }
                 },
                 error: function (error) {
