поместил текст по центру

--- a/templates/replacing.html
+++ b/templates/replacing.html
@@ -149,6 +149,7 @@
                         document.getElementById("transfer").innerHTML = "Оплатить*"
                         document.getElementById("user_agreement").style.display = "block"
                         document.getElementById("hidden").innerHTML = "Вы перенесли 100 треков, чтобы переносить без ограничений нажмите на кнопку оплатить"
+                        document.getElementsByClassName("btn-start")[0].style.marginTop = 10 + "px";
                     }
                 },
                 error: function (error) {
