Ссылка теперь открывается в отдельной вкладке

--- a/templates/replacing.html
+++ b/templates/replacing.html
@@ -56,7 +56,7 @@
             <button id="transfer">перенос</button>
             <div id="user_agreement" style="display: none;">
                 *Нажимая на кнопку оплатить вы соглашаеетесь с 
-                <a href="/static/Spotifier Пользовательское Соглашение.pdf">пользовательским соглашением</a>
+                <a href="/static/Spotifier Пользовательское Соглашение.pdf" target="_blank">пользовательским соглашением</a>
             </div>
         </div>
         <div id="errors">
