--- a/templates/replacing.html
+++ b/templates/replacing.html
@@ -146,7 +146,7 @@
                     if (json.url_to_pay !== null)
                     {
                         document.getElementById("transfer").setAttribute("onclick", 'window.location.href = ' + "'" + json.url_to_pay + "'")
-                        document.getElementById("transfer").innerHTML = "Оплатить*"
+                        document.getElementById("transfer").innerHTML = "Оплатить 69 руб*"
                         document.getElementById("user_agreement").style.display = "block"
                         document.getElementById("hidden").innerHTML = "Вы перенесли 100 треков, чтобы переносить без ограничений нажмите на кнопку оплатить"
                     }
