--- a/templates/spotify_form.html
+++ b/templates/spotify_form.html
@@ -75,6 +75,14 @@
                     можешь наслаждаться своей любимой музыкой в Spotify, который начнет учитывать твои вкусы.
                 </div>
             </div>
+            <div class="qst">
+                <p>Бесплатен ли перенос?</p>
+                <div>
+                    Вы можете перенести 100 любых треков бесплатно, а после оплаты 69 руб
+                    мы снимим ограничение на перенос! Нажимая на кнопку оплатить вы соглашаеетесь
+                    с <a href="/static/Spotifier Пользовательское Соглашение.pdf">пользовательским соглашением</a>
+                </div>
+            </div>
         </div>
     </div>
     </div>
