Сделал то что ты хотел

--- a/templates/replacing.html
+++ b/templates/replacing.html
@@ -54,7 +54,7 @@
         <div class="test">C VK В SPOTIFY</div>
         <div class="btn-start">
             <div id="hidden"></div>
-            <button id="transfer">перенос</button>
+            <button id="transfer">перенос&nbsp&nbsp&nbsp&nbsp&nbsp</button>
             <div id="user_agreement" style="display: none;">
                 *Нажимая на кнопку оплатить вы соглашаеетесь с 
                 <a href="/static/Spotifier Пользовательское Соглашение.pdf" target="_blank">пользовательским соглашением</a>
