Исправил ошибки в faq

--- a/templates/spotify_form.html
+++ b/templates/spotify_form.html
@@ -78,9 +78,9 @@
             <div class="qst">
                 <p>Бесплатен ли перенос?</p>
                 <div>
-                    Вы можете перенести 100 любых треков бесплатно, а после оплаты 69 руб
-                    мы снимим ограничение на перенос! Нажимая на кнопку оплатить вы соглашаеетесь
-                    с <a href="/static/Spotifier Пользовательское Соглашение.pdf">пользовательским соглашением</a>
+                    Вы можете перенести 100 любых треков бесплатно, а после оплаты 69 руб.
+                    мы снимем ограничение на перенос. Нажимая на кнопку оплатить вы соглашаетесь
+                    с <a href="/static/Spotifier Пользовательское Соглашение.pdf">пользовательским соглашением.</a>
                 </div>
             </div>
         </div>
