--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,7 @@
 
         <meta charset="utf-8" />
         <link rel="shortcut icon" href="/static/icon/favicon.ico" type="image/x-icon">
+        <link rel="apple-touch-icon" href="/static/icon/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="/static/mobile-css300px.css" />
         <link rel="stylesheet" href="/static/mobile-css600px.css" media="only screen and (min-device-width: 600px)" />
         <link rel="stylesheet" href="/static/mobile-css800px.css" media="only screen and (min-device-width: 800px)" />
@@ -49,8 +50,11 @@
             </div>
 
             <div class="banner">
-                <div class="smth-1">Перенести</div>
-                <div class="test">C VK В SPOTIFY</div>
+                <h1>
+                    <div class="smth-1">Перенести</div>
+                    <div class="test">C VK В SPOTIFY</div>
+                </h1>
+                
                 <div class="btn-start">
                     <div id="hidden"></div>
                     <button onclick="window.location.href = '/auth_vk';" id="btn">Начать</button>
@@ -61,20 +65,20 @@
         <div class="FAQ">
             часто задаваемые вопросы
             <div class="box">
-                <div class="qst">
+                <header class="qst">
                     <p>почему мы?</p>
                     <div>
                         Перенос музыки за пару кликов, ваши данные не хранятся на наших серверах, все строго
                         конфиденциально.
                     </div>
-                </div>
-                <div class="qst">
+                </header>
+                <header class="qst">
                     <p>Как все перенести?</p>
                     <div>
                         Жми на кнопку "ПЕРЕНЕСТИ". Затем заходишь в Vk, заходишь в Spotify и ждешь. Пара минут, и ты
                         можешь наслаждаться своей любимой музыкой в Spotify, который начнет учитывать твои вкусы.
                     </div>
-                </div>
+                </header>
                 <div class="qst">
                     <p>Бесплатен ли перенос?</p>
                     <div>
