--- a/static/mobile-css300px.css
+++ b/static/mobile-css300px.css
@@ -72,7 +72,7 @@ body * {
 
 
 
-input[type="submit"] {
+#vk_button {
   appearance:none;
   padding:10px;
   border:none;
@@ -208,7 +208,7 @@ a {
   width: 100%;
 }
 
-.btn-start button {
+#btn.btn-start {
   margin: 0 auto;
   position: relative;
   bottom: 25px;
@@ -237,6 +237,10 @@ a {
 
 .btn-start button:focus {
   outline: none;
+}
+
+#hidden_2fa{
+  display: none;
 }
 
 #hidden {
