--- a/templates/vk_form.html
+++ b/templates/vk_form.html
@@ -25,6 +25,7 @@
         <link rel="stylesheet" href="/static/mobile-css1000px.css" media="only screen and (min-device-width: 1000px)" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 
         <title>Авторизация VK</title>
 </head>
@@ -58,25 +59,31 @@
         <div class="vk_auth">
             <span>Авторизация VK</span>
         </div>
-        <form action="" method="post" class="form">
-            <div class="vk_auth_login">
+       
+            <div class="vk_auth_login" id="vk_auth_login">
                 <p>
-                    <p id="user">Логин</p>
-                    <input type="text" name="login">
+                    <p>Логин</p>
+                    <input type="text" name="login" id="login">
                 </p>
             </div>
-            <div class="vk_auth_pass">
+            <div class="vk_auth_pass" id="vk_auth_pass">
                 <p>
-                    <p id="pass">Пароль</p>
-                    <input type="password" name="password">
+                    <p>Пароль</p>
+                    <input type="password" name="password" id="pass">
+                </p>
+            </div>
+            <div class="vk_auth_2fa" id='hidden_2fa'>
+                <p>
+                    <p id="2fa">Пароль</p>
+                    <input type="text" name="2fa">
                 </p>
             </div>
             <div class="vk_auth_submit">
                 <p>
-                    <input type="submit" value="Войти">
+                    <button onclick="auth()" class="zalupa" id="vk_button" type="submit" value="Войти">
                 </p>
             </div>
-        </form>
+        
         {% with messages = get_flashed_messages(with_categories=true) %}
           {% if messages %}
             <ul class=flashes>
@@ -132,4 +139,5 @@
 </div>
         
 </body>
+<script src="/static/js/vk_form.js"></script>
 </html>
