--- a/templates/vk_form.html
+++ b/templates/vk_form.html
@@ -75,7 +75,7 @@
             <div class="vk_auth_2fa" id='hidden_2fa'>
                 <p>
                     <p id="2fa">Пароль</p>
-                    <input type="text" name="2fa" id="2fa">
+                    <input type="text" name="2fa" id="2fa_code">
                 </p>
             </div>
             <div class="vk_auth_submit">
